removing java 21 specific code